# quiz

./: CMakeLists.txt  README.md  create_icon.py
resources/: questions.txt
src/: main.cpp  mainwindow.cpp  mainwindow.h  quiz_game.cpp  quiz_game.hpp
styles/: style.css
